começando o balanceio da arvore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 project(voo)
 
 add_executable(voo main.c)
+IF (NOT WIN32)
+	target_link_libraries(voo m)
+ENDIF()
